# mycoinevo-libapp-cpp

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
src/APIClient/: HTTPRequests.beast.hpp  HTTPRequests_Interface.hpp  HostedCoinevo.cpp  HostedCoinevo.hpp  parsing.hpp
src/App/: AppServiceLocator.asio.cpp  AppServiceLocator.hpp
src/AppBridge/: AppBridge.cpp  AppBridge.hpp  HTTPRequests_Handle_bridge.hpp
src/Currencies/: Currencies.cpp  Currencies.hpp
src/Dispatch/: Dispatch.asio.hpp  Dispatch_Interface.hpp
src/Lists/: PersistedObjectListController.cpp  PersistedObjectListController.hpp
src/OpenAlias/: OpenAlias.cpp  OpenAlias.hpp
src/Passwords/: PasswordController.cpp  PasswordController.hpp
src/Persistence/: PersistableObject.cpp  PersistableObject.hpp  document_persister.cpp  document_persister.hpp
src/SendFunds/Controllers/: SendFundsFormSubmissionController.cpp  SendFundsFormSubmissionController.hpp
src/Settings/: SettingsController.cpp  SettingsController.hpp  SettingsProviders.cpp  SettingsProviders.hpp
src/UserIdle/: UserIdle.cpp  UserIdle.hpp
src/Wallets/: Wallet.cpp  Wallet.hpp  Wallet_HostPollingController.cpp  Wallet_HostPollingController.hpp  Wallet_KeyImageCache.cpp  Wallet_KeyImageCache.hpp  Wallet_TxCleanupController.cpp  Wallet_TxCleanupController.hpp  WalletsListController.Full.cpp  WalletsListController.Full.hpp  WalletsListController.Lite.cpp  WalletsListController.Lite.hpp  WalletsListController_Base.cpp  WalletsListController_Base.hpp
src/base64/: base64.hpp
src/contrib/: rapidjson_defines.hpp
test/: test_all.cpp  test_bridge.cpp  test_wallets.cpp  tests_common.hpp
